--- a/0-index.html
+++ b/0-index.html
@@ -3,10 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="./images/favicon.ico">
+    <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="0-styles.css">
     <title>Headphones</title>
 </head>
 <body>
-    
+    <header>
+        
+    </header>
 </body>
 </html>
