--- a/0-index.html
+++ b/0-index.html
@@ -9,8 +9,10 @@
     <title>Headphones</title>
 </head>
 <body>
-    <header>
-        
+    <header class="heady">
+        <div>
+
+        </div>
     </header>
 </body>
 </html>
