push for safekeeping

--- a/0-index.html
+++ b/0-index.html
@@ -8,11 +8,42 @@
     <link rel="stylesheet" href="0-styles.css">
     <title>Headphones</title>
 </head>
-<body>
-    <header class="heady">
-        <div>
 
-        </div>
-    </header>
+
+
+
+
+
+
+<body>
+    <div class="heady">
+        <header class="header">
+            <input type="checkbox" id="hamburger-input" class="burger-shower" />
+            <label id="hamburger-menu" for="hamburger-input">
+                <nav id="sidebar-menu">
+                    <ul>
+                        <li><a href="#">what we do</a></li>
+                        <li><a href="#">our results</a></li>
+                        <li><a href="#">contact us</a></li>
+                    </ul>
+                </nav>
+            </label>
+
+
+            <a class="logo" href="#">
+                <img src="./images/logo_headphones.png" alt="headphones logo">
+            </a>
+            <nav id="widenav">
+                <ul>
+                    <li><a href="#">what we do</a></li>
+                    <li><a href="#">our results</a></li>
+                    <li><a href="#">contact us</a></li>
+                </ul>
+            </nav>
+
+        </header>
+    </div>
+
+
 </body>
 </html>
